[package]
name = "ephemeropt"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
sysinfo = { version = "0.29.7", default-features = false }
tokio = { version = "1.30.0", features = ["full"] }
