[package]
name = "ephemeropt"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ravenclaw900/ephemeropt"
description = "An ephemeral Option that reverts to None after some time"
keywords = ["timed", "option", "ephemeral", "cache"]
categories = ["caching", "rust-patterns"]

[dependencies]

[dev-dependencies]
mock_instant = "0.3.1"
sysinfo = { version = "0.29.7", default-features = false }
tokio = { version = "1.30.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
